2nd - navbar done

--- a/index.html
+++ b/index.html
@@ -8,6 +8,31 @@
     <title>John Doe Portfolio | Coder</title>
 </head>
 <body>
+    <nav class="nav" id="nav">
+        <div class="nav-center">
+            <div class="nav-header">
+                <!-- <h2 class="nav-logo">Nimira Tech</h2> -->
+                <img src="./img/logo.svg" alt="nav-logo" class="nav-logo">
+                <button class="nav-btn" id="nav-btn">
+                    <i class="fas fa-bars"></i>
+                </button>
+            </div>
+            <ul class="nav-links">
+                <li>
+                    <a href="index.html">home</a>
+                </li>
+                <li>
+                    <a href="about.html">about</a>
+                </li>
+                <li>
+                    <a href="projects.html">projects</a>
+                </li>
+                <li>
+                    <a href="contact.html">contact</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
     <script src="script.js"></script>
 </body>
 </html>
