4th - started work on the about section

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="style.css">
-    <title>John Doe Portfolio | Coder</title>
+    <title>Nimira Tech Portfolio | Coding & Cyber Sec</title>
 </head>
 <body>
     <nav class="nav" id="nav">
         <div class="nav-center">
             <div class="nav-header">
-                <!-- <h2 class="nav-logo">Nimira Tech</h2> -->
-                <img src="./img/logo.svg" alt="nav-logo" class="nav-logo">
+                <h2 class="nav-logo">Nimira Tech</h2>
+                <!-- <img src="./img/logo.svg" alt="nav-logo" class="nav-logo"> -->
                 <button class="nav-btn" id="nav-btn">
                     <i class="fas fa-bars"></i>
                 </button>
@@ -81,6 +81,62 @@
             </ul>
         </div>
     </aside>
+    <header class="hero">
+        <div class="section-center hero-center">
+            <article class="hero-info">
+                <div class="underline"></div>
+                <h1>I'm Nick</h1>
+                <h4>Independent Coder and Cyber Security Student</h4>
+                <a href="contact.html" class="btn hero-btn">Contact Me</a>
+                <ul class="social-icons hero-icons">
+                    <li>
+                        <a href="#" class="social-icon">
+                            <i class="fab fa-facebook"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="social-icon">
+                            <i class="fab fa-x-twitter"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="social-icon">
+                            <i class="fab fa-linkedin"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="social-icon">
+                            <i class="fab fa-youtube"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="social-icon">
+                            <i class="fab fa-github"></i>
+                        </a>
+                    </li>
+                </ul>
+            </article>
+            <article class="hero-img">
+                <img src="./img/img-hero.jpg" class="hero-photo" alt="john doe">
+            </article>
+        </div>
+    </header>
+    <section class="section about">
+        <div class="section-center about-center">
+            <article class="about-img">
+                <img src="./img/img-about.jpg" class="hero-photo" alt="about img">
+            </article>
+            <article class="about-info">
+                <div class="section-title about-title">
+                    <h2>about</h2>
+                    <div class="underline"></div>
+                </div>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus, placeat expedita. Obcaecati, ea vero labore rerum cum aliquid unde, a placeat omnis quibusdam quod totam, expedita ad laudantium quae deleniti beatae quas fuga? Distinctio enim quaerat, consequuntur ab rerum ducimus.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, libero? Neque aut, consequuntur, quisquam nostrum dolore quod sint ullam veniam iure odit atque qui autem a et optio accusamus sed adipisci. Nisi repellat voluptatibus aperiam quae placeat repellendus!</p>
+                <a href="about.html" class="btn">about me</a>
+            </article>
+        </div>
+    </section>
     <script src="script.js"></script>
 </body>
 </html>
