5th - About section completed

--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
         <div class="section-center hero-center">
             <article class="hero-info">
                 <div class="underline"></div>
-                <h1>I'm Nick</h1>
-                <h4>Independent Coder and Cyber Security Student</h4>
+                <h1>Nimira Tech</h1>
+                <h4>Independent Coders and Cyber Security Students</h4>
                 <a href="contact.html" class="btn hero-btn">Contact Me</a>
                 <ul class="social-icons hero-icons">
                     <li>
