6th commit - Services section completed.

--- a/index.html
+++ b/index.html
@@ -137,6 +137,32 @@
             </article>
         </div>
     </section>
+    <section class="section bg-grey">
+        <div class="section-title">
+            <h2>services</h2>
+            <div class="underline"></div>
+        </div>
+        <div class="services-center section-center">
+            <article class="service">
+                <i class="fa-solid fa-shield-halved service-icon"></i>
+                <h4>Information Security</h4>
+                <div class="underline"></div>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error, aliquam? Eveniet quaerat perferendis explicabo quidem est molestias non porro ratione.</p>
+            </article>
+            <article class="service">
+                <i class="fa-solid fa-terminal service-icon"></i>
+                <h4>Remote Maintainence</h4>
+                <div class="underline"></div>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur nulla amet tempora nemo illum, libero enim? Harum asperiores dolorem nisi deleniti..</p>
+            </article>
+            <article class="service">
+                <i class="fa-solid fa-code service-icon"></i>
+                <h4>Coding Solutions</h4>
+                <div class="underline"></div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis qui molestiae iste! Hic, quaerat in? Eum nemo dolor harum!</p>
+            </article>
+        </div>
+    </section>
     <script src="script.js"></script>
 </body>
 </html>
