7th - Projects HTML and initia; CSS done

--- a/index.html
+++ b/index.html
@@ -163,6 +163,55 @@
             </article>
         </div>
     </section>
+    <section class="section projects">
+        <div class="section-title">
+            <h2>Recent Projects</h2>
+            <div class="underline"></div>
+            <p class="projects-text">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis tempore, saepe dolorum explicabo minus, ipsa mollitia pariatur assumenda recusandae, reprehenderit eveniet veniam corrupti fugit deserunt quidem neque molestias suscipit architecto in ab? Asperiores et deleniti veniam harum labore. Animi, nobis?
+            </p>
+        </div>
+        <div class="section-center project-center">
+            <a href="projects.html" class="project-1">
+                <article class="project">
+                    <img src="./img/project1.jpg" alt="single project" class="project-img">
+                    <div class="project-info">
+                        <h4>AutoRef</h4>
+                        <p>Trident Automotive</p>
+                    </div>
+                </article>
+            </a>
+            <a href="projects.html" class="project-2">
+                <article class="project">
+                    <img src="./img/project2.jpg" alt="single project" class="project-img">
+                    <div class="project-info">
+                        <h4>Genesis Hydra</h4>
+                        <p>Kim Edwards</p>
+                    </div>
+                </article>
+            </a>
+            <a href="projects.html" class="project-3">
+                <article class="project">
+                    <img src="./img/project3.jpg" alt="single project" class="project-img">
+                    <div class="project-info">
+                        <h4>TVR Detector</h4>
+                        <p>Glynn & Nicholls</p>
+                    </div>
+                </article>
+            </a>
+            <a href="projects.html" class="project-4">
+                <article class="project">
+                    <img src="./img/project4.jpg" alt="single project" class="project-img">
+                    <div class="project-info">
+                        <h4>Gladiator BMS</h4>
+                        <p>Forbes Services</p>
+                    </div>
+                </article>
+            </a>
+            
+
+        </div>
+    </section>
     <script src="script.js"></script>
 </body>
 </html>
