8th commit - Projects section completed

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis tempore, saepe dolorum explicabo minus, ipsa mollitia pariatur assumenda recusandae, reprehenderit eveniet veniam corrupti fugit deserunt quidem neque molestias suscipit architecto in ab? Asperiores et deleniti veniam harum labore. Animi, nobis?
             </p>
         </div>
-        <div class="section-center project-center">
+        <div class="section-center projects-center">
             <a href="projects.html" class="project-1">
                 <article class="project">
                     <img src="./img/project1.jpg" alt="single project" class="project-img">
