9th commit - connect section complete

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
     </section>
     <section class="section projects">
         <div class="section-title">
-            <h2>Recent Projects</h2>
+            <h2>recent projects</h2>
             <div class="underline"></div>
             <p class="projects-text">
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis tempore, saepe dolorum explicabo minus, ipsa mollitia pariatur assumenda recusandae, reprehenderit eveniet veniam corrupti fugit deserunt quidem neque molestias suscipit architecto in ab? Asperiores et deleniti veniam harum labore. Animi, nobis?
@@ -208,8 +208,30 @@
                     </div>
                 </article>
             </a>
-            
-
+        </div>
+    </section>
+    <section class="connect">
+        <video 
+            controls 
+            autoplay 
+            muted 
+            loop 
+            class="video-container" 
+            poster="./img/project1.jpg">
+            <source 
+                src="./video/contact2.mp4" 
+                type="video/mp4">
+                Sorry - your browser doesn't support this video.
+        </video>
+        <div class="video-banner">
+            <div class="section-title">
+                <h2>Contact us for consultation</h2>
+                <div class="underline"></div>
+            </div>
+            <p class="video-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit numquam placeat maxime, ducimus molestiae accusamus rerum quasi eius consequatur dignissimos obcaecati assumenda cum, autem veritatis laboriosam aliquid explicabo! Earum asperiores ratione aspernatur provident aliquam, tempora quibusdam esse minima eveniet sequi.
+            </p>
+            <a href="contact.html" class="btn">contact us</a>
         </div>
     </section>
     <script src="script.js"></script>
