--- a/index.html
+++ b/index.html
@@ -234,6 +234,62 @@
             <a href="contact.html" class="btn">contact us</a>
         </div>
     </section>
+    <section class="section skills">
+        <div class="section-title">
+            <h2>our expertise</h2>
+            <div class="underline"></div>
+        </div>
+        <div class="section-center skills-center">
+            <article>
+                <h3>Coding</h3>
+                <div class="skill">
+                    <p>MERN Stack</p>
+                    <div class="skill-container">
+                        <div class="skill-value"></div>
+                        <p class="skill-text">90%</p>
+                    </div>
+                </div>
+                <div class="skill">
+                    <p>Microservices</p>
+                    <div class="skill-container">
+                        <div class="skill-value value-71"></div>
+                        <p class="skill-text skill-text-71">71%</p>
+                    </div>
+                </div>
+                <div class="skill">
+                    <p>Game Development</p>
+                    <div class="skill-container">
+                        <div class="skill-value value-87"></div>
+                        <p class="skill-text skill-text-87">87%</p>
+                    </div>
+                </div>
+            </article>
+            <article>
+                <h3>Cyber Security</h3>
+                <div class="skill">
+                    <p>Pen-Testing</p>
+                    <div class="skill-container">
+                        <div class="skill-value"></div>
+                        <p class="skill-text">90%</p>
+                    </div>
+                </div>
+                <div class="skill">
+                    <p>Security Software</p>
+                    <div class="skill-container">
+                        <div class="skill-value value-92"></div>
+                        <p class="skill-text skill-text-92">92%</p>
+                    </div>
+                </div>
+                <div class="skill">
+                    <p>Consultancy</p>
+                    <div class="skill-container">
+                        <div class="skill-value value-93"></div>
+                        <p class="skill-text skill-text-93">93%</p>
+                    </div>
+                </div>
+            </article>
+        </div>
+    </section>
     <script src="script.js"></script>
 </body>
 </html>
