11th commit - Timeline section added.

--- a/index.html
+++ b/index.html
@@ -290,6 +290,45 @@
             </article>
         </div>
     </section>
+
+    <section class="section timeline">
+        <div class="section-title">
+            <h2>timeline</h2>
+            <div class="underline"></div>
+        </div>
+        <div class="section-center timeline-center">
+            <article class="timeline-item">
+                <h4>January 2024</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat fugit voluptatibus eligendi harum illum ab tenetur, eum officiis animi in!</p>
+                <span class="number">1</span>
+            </article>
+            <article class="timeline-item">
+                <h4>July 2023</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat fugit voluptatibus eligendi harum illum ab tenetur, eum officiis animi in!</p>
+                <span class="number">2</span>
+            </article>
+            <article class="timeline-item">
+                <h4>April 2023</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat fugit voluptatibus eligendi harum illum ab tenetur, eum officiis animi in!</p>
+                <span class="number">3</span>
+            </article>
+            <article class="timeline-item">
+                <h4>February 2022</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat fugit voluptatibus eligendi harum illum ab tenetur, eum officiis animi in!</p>
+                <span class="number">4</span>
+            </article>
+            <article class="timeline-item">
+                <h4>May 2020</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat fugit voluptatibus eligendi harum illum ab tenetur, eum officiis animi in!</p>
+                <span class="number">5</span>
+            </article>
+            <article class="timeline-item">
+                <h4>January 2020</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat fugit voluptatibus eligendi harum illum ab tenetur, eum officiis animi in!</p>
+                <span class="number">6</span>
+            </article>
+        </div>
+    </section>
     <script src="script.js"></script>
 </body>
 </html>
