Created blog section with new images.

--- a/index.html
+++ b/index.html
@@ -329,6 +329,78 @@
             </article>
         </div>
     </section>
+    <section class="section blog">
+    <div class="section-title">
+        <h2>blog</h2>
+        <div class="underline"></div>
+    </div>
+    <div class="section-center blog-center">
+        <div class="card">
+            <div class="card-side card-front">
+                <img src="./img/card-1.jpg" alt="">
+                <div class="card-info">
+                    <h4>Cyber Threats</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus illum facilis, maiores tempore fugit voluptatum ut dolorem vitae tenetur quia.</p>
+                    <div class="card-footer">
+                        <img src="./img/small-hero.jpg" alt="author image">
+                        <p>20 minute read</p>
+                    </div>
+                </div>
+            </div>
+            <div class="card-side card-back">
+                <button class="btn">Read More</button>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-side card-front">
+                <img src="./img/card-3.jpg" alt="">
+                <div class="card-info">
+                    <h4>Discover React 19</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed quam neque, vero porro dicta deleniti necessitatibus officiis sapiente consequuntur autem provident.</p>
+                    <div class="card-footer">
+                        <img src="./img/small-hero.jpg" alt="author image">
+                        <p>15 minute read</p>
+                    </div>
+                </div>
+            </div>
+            <div class="card-side card-back">
+                <button class="btn">Read More</button>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-side card-front">
+                <img src="./img/card-x.jpg" alt="">
+                <div class="card-info">
+                    <h4>Malware Evolution 2024</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum blanditiis quibusdam, dicta vel id sint iusto optio consequatur?</p>
+                    <div class="card-footer">
+                        <img src="./img/small-hero.jpg" alt="author image">
+                        <p>2 hour video</p>
+                    </div>
+                </div>
+            </div>
+            <div class="card-side card-back">
+                <button class="btn">Read More</button>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-side card-front">
+                <img src="./img/card-4.jpg" alt="">
+                <div class="card-info">
+                    <h4>Gaming Engines</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, iusto tenetur labore quam, deleniti est consequatur praesentium molestias rerum exercitationem ad illum!</p>
+                    <div class="card-footer">
+                        <img src="./img/small-hero.jpg" alt="author image">
+                        <p>40 minute read</p>
+                    </div>
+                </div>
+            </div>
+            <div class="card-side card-back">
+                <button class="btn">Read More</button>
+            </div>
+        </div>
+    </div>
+    </section>
     <script src="script.js"></script>
 </body>
 </html>
