--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
                 </div>
             </div>
             <div class="card-side card-back">
-                <button class="btn">Read More</button>
+                <button class="btn">read more</button>
             </div>
         </div>
         <div class="card">
@@ -364,7 +364,7 @@
                 </div>
             </div>
             <div class="card-side card-back">
-                <button class="btn">Read More</button>
+                <button class="btn">read more</button>
             </div>
         </div>
         <div class="card">
@@ -380,7 +380,7 @@
                 </div>
             </div>
             <div class="card-side card-back">
-                <button class="btn">Read More</button>
+                <button class="btn">see more</button>
             </div>
         </div>
         <div class="card">
@@ -396,11 +396,45 @@
                 </div>
             </div>
             <div class="card-side card-back">
-                <button class="btn">Read More</button>
+                <button class="btn">read more</button>
             </div>
         </div>
     </div>
     </section>
+    <footer class="footer">
+        <ul class="social-icons">
+            <li>
+                <a href="#" class="social-icon">
+                    <i class="fab fa-facebook"></i>
+                </a>
+            </li>
+            <li>
+                <a href="#" class="social-icon">
+                    <i class="fab fa-x-twitter"></i>
+                </a>
+            </li>
+            <li>
+                <a href="#" class="social-icon">
+                    <i class="fab fa-linkedin"></i>
+                </a>
+            </li>
+            <li>
+                <a href="#" class="social-icon">
+                    <i class="fab fa-youtube"></i>
+                </a>
+            </li>
+            <li>
+                <a href="#" class="social-icon">
+                    <i class="fab fa-github"></i>
+                </a>
+            </li>
+        </ul>
+        <p>&copy; <span id="date"></span> nimira tech.</p>
+    </footer>
+
+
+
+
     <script src="script.js"></script>
 </body>
 </html>
