15th - Finished About and Contact sections.

--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
         <div class="nav-center">
             <div class="nav-header">
                 <h2 class="nav-logo">Nimira Tech</h2>
-                <!-- <img src="./img/logo.svg" alt="nav-logo" class="nav-logo"> -->
+                
                 <button class="nav-btn" id="nav-btn">
                     <i class="fas fa-bars"></i>
                 </button>
@@ -83,6 +83,18 @@
             </ul>
         </div>
     </aside>
+    <section class="section single-page">
+        <div class="section-title">
+            <h1>about me</h1>
+            <div class="underline"></div>
+        </div>
+        <div class="section-center page-info">
+            <p>Hello, I'm Nick Rabone and I am studying web development. I live and work in Birmingham. I spend a lot of time experimenting with JavaScript framesworks, CSS, Python and learning other programming languages such as C, Rust and R.</p>
+            <p>I enjoy coding and the challenge of learning something new everyday. You can find my work
+            on GitHub <a href="https://github.com/Nimira43">here.</a></p>
+        </div>
+
+    </section>
     <footer class="footer">
         <ul class="social-icons">
             <li>
