--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,6 @@
         <div class="nav-center">
             <div class="nav-header">
                 <h2 class="nav-logo">Nimira Tech</h2>
-                <!-- <img src="./img/logo.svg" alt="nav-logo" class="nav-logo"> -->
                 <button class="nav-btn" id="nav-btn">
                     <i class="fas fa-bars"></i>
                 </button>
@@ -83,6 +82,16 @@
             </ul>
         </div>
     </aside>
+    <section class="section single-page">
+        <div class="section-title">
+            <h1>contact me</h1>
+            <div class="underline"></div>
+        </div>
+        <div class="section-center page-info">
+            <p>I hope you'll take a look round and visit my <a href="https://github.com/Nimira43">GitHub </a> page where you'll be able to discover more of my projects.</p>
+            <p>If you wish to contact me you can reach me via email at the following address: <a href="nimiratech@arimin.com">nimiratech@arimin.com </a> or visit me at <a href="https://twitter.com/x">X.</a></p>
+        </div>
+    </section>
     <footer class="footer">
         <ul class="social-icons">
             <li>
