Project finished - project is complete. Will look at fine tuning any issues that may arise.

--- a/projects.html
+++ b/projects.html
@@ -83,6 +83,71 @@
             </ul>
         </div>
     </aside>
+    <header class="project-hero">
+        <div class="section-title project-title">
+            <h1>Flagship Projects</h1>
+            <div class="underline"></div>
+        </div>
+    </header>
+    <section class="section">
+        <div class="section-center projects-page-center">
+            <article class="single-project">
+                <div class="project-container">
+                    <img src="./img/flagship1.jpg" alt="flagship one">
+                    <a href="https://github.com/Nimira43" class="project-icon">
+                        <i class="fas fa-home"></i>
+                    </a>
+                </div>
+                <div class="project-details">
+                    <h4>Viper Anti-Malware</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore repudiandae nisi quidem magni quam veritatis reprehenderit odit quaerat nam sed!</p>
+                    <div class="project-footer">
+                        <span>
+                            <i class="fab fa-github"></i>
+                        </span>
+                        <a href="https://github.com/Nimira43/Nimira-Tech-website">source code</a>
+                    </div>
+                </div>
+            </article>
+            <article class="single-project">
+                <div class="project-container">
+                    <img src="./img/flagship2.jpg" alt="flagship two">
+                    <a href="https://github.com/Nimira43" class="project-icon">
+                        <i class="fas fa-home"></i>
+                    </a>
+                </div>
+                <div class="project-details">
+                    <h4>Skorpion IPS</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo quo tempora aliquid culpa temporibus corrupti non. Ratione.</p>
+                    <div class="project-footer">
+                        <span>
+                            <i class="fab fa-github"></i>
+                        </span>
+                        <a href="https://github.com/Nimira43/Backroads-Website">source code</a>
+                    </div>
+                </div>
+            </article>
+            <article class="single-project">
+                <div class="project-container">
+                    <img src="./img/protect.jpg" alt="flagship three">
+                    <a href="https://github.com/Nimira43" class="project-icon">
+                        <i class="fas fa-home"></i>
+                    </a>
+                </div>
+                <div class="project-details">
+                    <h4>Protector of the Larvakind</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel ullam corrupti ducimus cum earum. Mollitia, sit.</p>
+                    <div class="project-footer">
+                        <span>
+                            <i class="fab fa-github"></i>
+                        </span>
+                        <a href="https://github.com/Nimira43/Protector-of-the-Larvakind">source code</a>
+                    </div>
+                </div>
+            </article>
+        </div>
+    </section>    
+    
     <footer class="footer">
         <ul class="social-icons">
             <li>
@@ -113,11 +178,6 @@
         </ul>
         <p>&copy; <span id="date"></span> nimira tech.</p>
     </footer>
-
-
-
-
     <script src="script.js"></script>
 </body>
-
 </html>
